lab1/draft/parse_t/parser.output
Terminals unused in grammar

   ITALIC


Grammar

    0 $accept: text $end

    1 text: parag_list

    2 phrase: WORD phrase
    3       | %empty

    4 paragraph: phrase NEWLINE

    5 parag_list: paragraph parag_list
    6           | phrase


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 2
NEWLINE (259) 4
ITALIC (260)


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
text (7)
    on left: 1, on right: 0
phrase (8)
    on left: 2 3, on right: 2 4 6
paragraph (9)
    on left: 4, on right: 5
parag_list (10)
    on left: 5 6, on right: 1 5


State 0

    0 $accept: . text $end

    WORD  shift, and go to state 1

    $default  reduce using rule 3 (phrase)

    text        go to state 2
    phrase      go to state 3
    paragraph   go to state 4
    parag_list  go to state 5


State 1

    2 phrase: WORD . phrase

    WORD  shift, and go to state 1

    $default  reduce using rule 3 (phrase)

    phrase  go to state 6


State 2

    0 $accept: text . $end

    $end  shift, and go to state 7


State 3

    4 paragraph: phrase . NEWLINE
    6 parag_list: phrase .

    NEWLINE  shift, and go to state 8

    $default  reduce using rule 6 (parag_list)


State 4

    5 parag_list: paragraph . parag_list

    WORD  shift, and go to state 1

    $default  reduce using rule 3 (phrase)

    phrase      go to state 3
    paragraph   go to state 4
    parag_list  go to state 9


State 5

    1 text: parag_list .

    $default  reduce using rule 1 (text)


State 6

    2 phrase: WORD phrase .

    $default  reduce using rule 2 (phrase)


State 7

    0 $accept: text $end .

    $default  accept


State 8

    4 paragraph: phrase NEWLINE .

    $default  reduce using rule 4 (paragraph)


State 9

    5 parag_list: paragraph parag_list .

    $default  reduce using rule 5 (parag_list)
